tests/bad/enum_method_with_same_name.ae
/// fail: Cannot call a non-function type

enum Variable {
    Integer
    IntLiteral
    Float
    String
}

def Variable::Integer() {}
